fix the logo bug

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- navbar -->
     <nav>
         <a href="/">
-            <img src="/assets/logo.png" alt="Avricus Logo" />
+            <img src="./assets/logo.png" alt="Avricus Logo" />
         </a>
         <ul id="navbar-items">
             <li><a href="#">Home</a></li>
