--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
     <!-- navbar -->
     <nav>
-        <a href="/">
-            <img src="./assets/logo.png" alt="Avricus Logo" />
+        <a href="/" class="logo-container">
+            <img src="/assets/logo.png" alt="Avricus Logo" />
+            <h1>AVRICUS</h1>
         </a>
         <ul id="navbar-items">
             <li><a href="#">Home</a></li>
@@ -39,7 +40,6 @@
     <!-- Introduction Section -->
     <section id='introSection'>
         <div class="readSection faders">
-            <h1>Avricus</h1>
              <p>Avricus is bringing access to collaborative education for students across the country, thus revolutionising the Ed-Tech market in india.</p>
           </div>
         <div class="imgParent sliders from-right">
@@ -68,7 +68,8 @@
         <div id="teamSection-Mainimage" class="faders">
             <img src="./assets/combined.PNG" alt="Shobhit and Yash Image">
           </div>
-        <p class="faders"><b>SHOBHIT NIRWAN</b> & <b>YASH GARG</b> Currently running the top YouTube channels for K-12 students with more than 1 Million cumulative followers.Shobhit & Yash are currently IIIT and DTU undergrads with a vision to reach millions of students across India.</p>
+        <h2 class="faders">YASH GARG & SHOBHIT NIRWAN</h2>
+        <p class="faders">Currently running the top YouTube channels for K-12 students with more than 1 Million cumulative followers.Shobhit & Yash are currently IIIT and DTU undergrads with a vision to reach millions of students across India.</p>
         <div id="team" class="faders">
 
             <div class="teamMember">
@@ -81,7 +82,7 @@
 
             <div class="teamMember">
                 <div class="teamMember-image">
-                    <img src="./assets/NimitImage.PNG" alt="Nimit Nirwan">
+                    <img src="./assets/NimitImage.jpeg" alt="Nimit Nirwan">
                  </div>
                 <h2>Nimit Nirwan</h2>
                 <p>Production Head</p>
@@ -89,9 +90,9 @@
 
             <div class="teamMember">
                 <div class="teamMember-image">
-                    <img src="./assets/SanchitImage.jpg" alt="Sanchit Jain">
+                    <img src="./assets/SanchitImage.jpg" alt="Sanchit Garg">
                 </div>
-                <h2>Sanchit Jain</h2>
+                <h2>Sanchit Garg</h2>
                 <p>Operations Manager</p>
             </div> 
 
@@ -103,13 +104,13 @@
     <!-- Contact Section -->
     <section id='contactSection' class="faders">
         <h1 class="section-heading" >Contact Us</h1>
-        <p><b>Email</b> - Jobs@avricus.com</p>
-        <p><b>Address</b> - Avricus Private Limited B-2/400, Yamuna Vihar, Delhi - 110053, India</p>
+        <p><b>Email</b> - jobs@avricus.com</p>
+        <p><b>Address</b> -<br> Avricus Private Limited B-2400, Yamuna Vihar, Delhi - 110053, India</p>
     </section>
   
     <!-- copyright section -->
     <section id="copyrightSection" class="faders">
-       <p>Copyrigt &copy; 2021 Avricus</p>
+       <p>Copyright &copy; 2021 Avricus Pvt. Ltd.</p>
     </section>
 
 <script src="./app.js"></script>
