updated index file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- navbar -->
     <nav>
         <a href="/" class="logo-container">
-            <img src="/assets/logo.png" alt="Avricus Logo" />
+            <img src="./assets/logo.png" alt="Avricus Logo" />
             <h1>AVRICUS</h1>
         </a>
         <ul id="navbar-items">
