--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- navbar -->
     <nav>
-        <a href="/" class="logo-container">
+        <a href="#" class="logo-container">
             <img src="./assets/logo.png" alt="Avricus Logo" />
             <h1>AVRICUS</h1>
         </a>
