updated team section

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <!-- tags for seo -->
     <meta name="description" content="Avricus is bringing access to collaborative education for students.">
 
-    <title>Avricus</title>
+    <title>Avricus : Empowering India</title>
 </head>
 <body>
 
     <!-- navbar -->
     <nav>
         <a href="#" class="logo-container">
-            <img src="./assets/logo.png" alt="Avricus Logo" />
             <h1>AVRICUS</h1>
         </a>
         <ul id="navbar-items">
@@ -68,7 +67,7 @@
         <div id="teamSection-Mainimage" class="faders">
             <img src="./assets/combined.PNG" alt="Shobhit and Yash Image">
           </div>
-        <h2 class="faders">YASH GARG & SHOBHIT NIRWAN</h2>
+        <h2 class="faders">Yash Garg & Shobhit Nirwan</h2>
         <p class="faders">Currently running the top YouTube channels for K-12 students with more than 1 Million cumulative followers.Shobhit & Yash are currently IIIT and DTU undergrads with a vision to reach millions of students across India.</p>
         <div id="team" class="faders">
 
@@ -105,7 +104,8 @@
     <section id='contactSection' class="faders">
         <h1 class="section-heading" >Contact Us</h1>
         <p><b>Email</b> - jobs@avricus.com</p>
-        <p><b>Address</b> -<br> Avricus Private Limited B-2400, Yamuna Vihar, Delhi - 110053, India</p>
+        <p><b>Address</b> - Avricus Private Limited<br> 
+            <span>B-2400, Yamuna Vihar, Delhi - 110053, India</span></p>
     </section>
   
     <!-- copyright section -->
