last update index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="./assets/combined.PNG" alt="Shobhit and Yash Image">
           </div>
         <h2 class="faders">Yash Garg & Shobhit Nirwan</h2>
-        <p class="faders">Currently running the top YouTube channels for K-12 students with more than 1 Million cumulative followers.Shobhit & Yash are currently IIIT and DTU undergrads with a vision to reach millions of students across India.</p>
+        <p class="faders">Currently running the top YouTube channels for K-12 students with more than 1 Million cumulative followers.<br>Shobhit & Yash are currently IIIT and DTU undergrads with a vision to reach millions of students across India.</p>
         <div id="team" class="faders">
 
             <div class="teamMember">
@@ -103,16 +103,36 @@
     <!-- Contact Section -->
     <section id='contactSection' class="faders">
         <h1 class="section-heading" >Contact Us</h1>
-        <p><b>Email</b> - jobs@avricus.com</p>
-        <p><b>Address</b> - Avricus Private Limited<br> 
-            <span>B-2400, Yamuna Vihar, Delhi - 110053, India</span></p>
+      <div id='contact-subsection'>
+            <div>
+                <p><b>Email</b> - jobs@avricus.com</p>
+                <p><b>Address</b> - Avricus Private Limited<br> <span>B-2400, Yamuna Vihar, Delhi - 110053, India</span></p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.616797877753!2d77.2673392155314!3d28.701107487723885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd0fb2575c23%3A0x541d7f51c17dc16a!2sGarg%E2%80%99s%20Residence!5e0!3m2!1sen!2sin!4v1626203031083!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div>
+                <h2>Talk to our founders</h2>
+              <div id='contact-founders'>
+                    <div>
+                    <h3>Shobhit Nirwan</h3>
+                    <p><a href="https://www.instagram.com/shobbynirwan/"><img src="./assets/instagram.png" alt="insta"></a></p>
+                    <p><a href=" https://www.youtube.com/c/ShobhitNirwan"><img src="./assets/youtube.png" alt="youtube"></a></p>
+                    <p><a href="https://www.linkedin.com/in/shobhit-nirwan-450789191/?originalSubdomain=in"><img src="./assets/linkedin.png" alt="linkedin"></a></p>
+                    </div>
+                    <div>
+                    <h3>Yash Garg</h3>
+                    <p><a href="https://www.instagram.com/yashgeez/"><img src="./assets/instagram.png" alt="insta"></a></p>
+                    <p><a href="https://www.youtube.com/c/YashGargOfficial"><img src="./assets/youtube.png" alt="youtube"></a></p>
+                    <p><a href="https://www.linkedin.com/in/yash-garg-30a473159/"><img src="./assets/linkedin.png" alt="linkedin"></a></p>
+                    </div>
+            </div>
+            </div>
+      </div>
     </section>
   
     <!-- copyright section -->
     <section id="copyrightSection" class="faders">
        <p>Copyright &copy; 2021 Avricus Pvt. Ltd.</p>
     </section>
-
 <script src="./app.js"></script>
 </body>
 </html>
