--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.616797877753!2d77.2673392155314!3d28.701107487723885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd0fb2575c23%3A0x541d7f51c17dc16a!2sGarg%E2%80%99s%20Residence!5e0!3m2!1sen!2sin!4v1626203031083!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div>
-                <h2>Talk to our Founders</h2>
+                <h2>Talk to our Founders!</h2>
               <div id='contact-founders'>
                     <div>
                     <h3>Shobhit Nirwan</h3>
