--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div id='contact-subsection'>
             <div>
                 <p><b>Email</b> - jobs@avricus.com</p>
-                <p><b>Address</b> - Avricus Private Limited<br> <span>B-2400, Yamuna Vihar, Delhi - 110053, India</span></p>
+                <p><b>Address</b> - Avricus Private Limited<br> <span> B-2/400, Yamuna Vihar, Delhi - 110053, India</span></p>
                 <iframe id='contact-subsectionmap' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.616797877753!2d77.2673392155314!3d28.701107487723885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd0fb2575c23%3A0x541d7f51c17dc16a!2sGarg%E2%80%99s%20Residence!5e0!3m2!1sen!2sin!4v1626203031083!5m2!1sen!2sin"  allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div>
