added target attr in founders section

--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
               <div id='contact-founders'>
                     <div>
                     <h3>Shobhit Nirwan</h3>
-                    <p><a href="https://www.instagram.com/shobbynirwan/"><img src="./assets/instagram.png" alt="insta"></a></p>
-                    <p><a href=" https://www.youtube.com/c/ShobhitNirwan"><img src="./assets/youtube.png" alt="youtube"></a></p>
-                    <p><a href="https://www.linkedin.com/in/shobhit-nirwan-450789191/?originalSubdomain=in"><img src="./assets/linkedin.png" alt="linkedin"></a></p>
+                    <p><a href="https://www.instagram.com/shobbynirwan/" target="_blank"><img src="./assets/instagram.png" alt="insta"></a></p>
+                    <p><a href=" https://www.youtube.com/c/ShobhitNirwan" target="_blank"><img src="./assets/youtube.png" alt="youtube"></a></p>
+                    <p><a href="https://www.linkedin.com/in/shobhit-nirwan-450789191/?originalSubdomain=in" target="_blank"><img src="./assets/linkedin.png" alt="linkedin"></a></p>
                     </div>
                     <div>
                     <h3>Yash Garg</h3>
-                    <p><a href="https://www.instagram.com/yashgeez/"><img src="./assets/instagram.png" alt="insta"></a></p>
-                    <p><a href="https://www.youtube.com/c/YashGargOfficial"><img src="./assets/youtube.png" alt="youtube"></a></p>
-                    <p><a href="https://www.linkedin.com/in/yash-garg-30a473159/"><img src="./assets/linkedin.png" alt="linkedin"></a></p>
+                    <p><a href="https://www.instagram.com/yashgeez/" target="_blank"><img src="./assets/instagram.png" alt="insta"></a></p>
+                    <p><a href="https://www.youtube.com/c/YashGargOfficial" target="_blank"><img src="./assets/youtube.png" alt="youtube"></a></p>
+                    <p><a href="https://www.linkedin.com/in/yash-garg-30a473159/"  target="_blank"><img src="./assets/linkedin.png" alt="linkedin"></a></p>
                     </div>
             </div>
             </div>
