--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              <p>Avricus is bringing access to collaborative education for students across the country, thus revolutionising the Ed-Tech market in India.</p>
           </div>
         <div class="imgParent sliders from-right">
-            <img src="./assets/graphic1.png" alt="Graphic 1">
+            <img src="./assets/graphic A png.png" alt="Graphic 1">
          </div>
     </section>
 
