--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul class='navbar-mobile-items'>
         <li><a href="#">Home</a></li>
         <li><a href="#teamSection">Our Team</a></li>
-        <li><a href="#contactSection">Contact</a></li>           
+        <li><a href="#contactSection">Contact Us</a></li>           
     </ul>
 
     <!-- Introduction Section -->
