--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul id="navbar-items">
             <li><a href="#">Home</a></li>
             <li><a href="#teamSection">Our Team</a></li>
-            <li><a href="#contactSection">Contact</a></li>
+            <li><a href="#contactSection">Contact Us</a></li>
         </ul>
       <img id="menuIcon" src="./assets/menu.png" alt='menu'/>
     </nav>
